# hrms

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
about-hrms/: API-REFERENCE.md  DEPLOYMENT.md  README.md
api/: Dockerfile  alembic.ini  env-example.txt  pyproject.toml
api/alembic/: env.py
api/app/: main.py
api/app/api/v1/: assessments.py  attendance.py  auth.py  companies.py  departments.py  designations.py  employees.py  holidays.py  interviews.py  jobs.py  leaves.py  notifications.py  offers.py  okr.py  payroll.py  performance.py  router.py  shifts.py  tasks.py
api/app/core/: config.py  database.py  dependencies.py  security.py
api/app/models/: __init__.py  assessment.py  attendance.py  base.py  company.py  department.py  designation.py  employee.py  holiday.py  interview.py  leave.py  notification.py  offer.py  okr.py  payroll.py  performance.py  recruitment.py  task.py  tax.py  user.py
api/app/schemas/: assessment.py  attendance.py  auth.py  common.py  company.py  department.py  designation.py  employee.py  holiday.py  interview.py  leave.py  notification.py  offer.py  okr.py  payroll.py  performance.py  recruitment.py  shift.py  task.py  tax.py
api/app/scripts/: __main__.py  seed.py
api/app/services/: assessment_service.py  attendance_service.py  auth_service.py  employee_service.py  leave_service.py  okr_service.py  payroll_service.py  performance_service.py  recruitment_service.py  task_service.py
api/app/utils/: id_generator.py  pagination.py
deploy/: deploy.sh  nginx.conf  setup.sh
mobile/: app.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  notifications.tsx
mobile/components/: ApprovalItem.tsx  AttendanceCard.tsx  EmptyState.tsx  LeaveBalanceCard.tsx  (+2 more)
web/: index.html  package.json  tailwind.config.ts
(+118 files in other folders)
